--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,8 +38,9 @@ form {
     justify-content: center;
 }
 a:hover {
-    color: ghostwhite;
+    color: #8b8b8b;
 }
+
 
 /*classes*/
 
